# swagger/swagger.yml
@@ -971,6 +971,23 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/controllers.respData'
+  /heartbeat/:
+    get:
+      tags:
+      - heartbeat
+      description: |-
+        heartbeat
+        <br>
+      operationId: HeartbeatController.Heartbeat
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/controllers.respData'
   /individual-signing/{link_id}:
     get:
       tags:
